Implemented remaining dsc dataservice stubs & tests